--- a/berita.html
+++ b/berita.html
@@ -11,7 +11,7 @@
     <nav class="navbar navbar-dark fixed-top" style="background-color:#0e5faa;">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <img src="img/logo.png.png" width="36" height="36" class="d-inline-block align-text-top me-2" alt="Logo">
+                <img src="img/logo.png%20banner.jpg" width="36" height="36" class="d-inline-block align-text-top me-2" alt="Logo">
                 SMK DAARUDDA'WAH
             </a>
             <a class="btn btn-outline-light" href="index.html">Kembali</a>
@@ -24,7 +24,7 @@
         <div class="row g-4">
             <div class="col-md-6">
                 <div class="card">
-                    <img src="img/images (3).jpeg" class="card-img-top img-cover" alt="Berita 1">
+                    <img src="img/images%20(3).jpeg" class="card-img-top img-cover" alt="Berita 1">
                     <div class="card-body">
                         <h5 class="card-title">JUARA 1 LOMBA MERAKIT CPU</h5>
                         <p class="card-text small text-muted">25 Januari 2025</p>
@@ -36,7 +36,7 @@
 
             <div class="col-md-6">
                 <div class="card">
-                    <img src="img/images 2.jpeg" class="card-img-top img-cover" alt="Berita 2">
+                    <img src="img/images%202.jpeg" class="card-img-top img-cover" alt="Berita 2">
                     <div class="card-body">
                         <h5 class="card-title">JUARA 2 LOMBA JARINGAN</h5>
                         <p class="card-text small text-muted">18 Februari 2025</p>
@@ -51,8 +51,5 @@
     <footer class="text-center py-3 mt-4" style="background:#0e5faa; color:#fff;">
         <div class="container"><small>&copy; <span id="year"></span> SMK DAARUDDA'WAH</small></div>
     </footer>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script> (function(){var el=document.getElementById('year'); if(el) el.textContent=new Date().getFullYear();})(); </script>
 </body>
 </html>
