--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav class="navbar navbar-dark fixed-top navbar-expand-lg" style="background-color: #0e5faa;">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">
-                <img src="assets/img/logo.png" alt="Logo SMK" width="40" height="40" class="d-inline-block align-text-top me-2" onerror="this.onerror=null;this.src='img/logo.png%20banner.jpg'">
+                <img src="assets/img/logo.png.png" alt="Logo SMK" width="40" height="40" class="d-inline-block align-text-top me-2" onerror="this.onerror=null;this.src='img/logo.png%20banner.jpg'">
                 SMK DAARUDDA'WAH
             </a>
             <!-- rest of navbar unchanged -->
