--- a/akl.html
+++ b/akl.html
@@ -10,6 +10,7 @@
     <style>
         .img-cover { width:100%; height:100%; object-fit:cover; display:block; }
     </style>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body>
@@ -170,3 +171,4 @@
 </body>
 
 </html>
+
