--- a/visi-misi.html
+++ b/visi-misi.html
@@ -6,6 +6,7 @@
     <title>Visi & Misi - SMK DAARUDDA'WAH</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>body{padding-top:70px}</style>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
     <nav class="navbar navbar-dark fixed-top" style="background-color:#0e5faa;">
@@ -47,3 +48,4 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
