--- a/berita.html
+++ b/berita.html
@@ -6,6 +6,7 @@
     <title>Berita - SMK DAARUDDA'WAH</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>body{padding-top:70px} .img-cover{width:100%;height:260px;object-fit:cover;}</style>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
     <nav class="navbar navbar-dark fixed-top" style="background-color:#0e5faa;">
@@ -56,3 +57,4 @@
     <script> (function(){var el=document.getElementById('year'); if(el) el.textContent=new Date().getFullYear();})(); </script>
 </body>
 </html>
+
