--- a/berita-1.html
+++ b/berita-1.html
@@ -6,6 +6,7 @@
     <title>Berita - JUARA 1 LOMBA MERAKIT CPU - SMK DAARUDDA'WAH</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>body{padding-top:70px} .img-cover{width:100%;height:400px;object-fit:cover;}</style>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
     <nav class="navbar navbar-dark fixed-top" style="background-color:#0e5faa;">
@@ -38,3 +39,4 @@
     <script> (function(){var el=document.getElementById('year'); if(el) el.textContent=new Date().getFullYear();})(); </script>
 </body>
 </html>
+
