--- a/index.html
+++ b/index.html
@@ -197,8 +197,8 @@
     <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel" style="margin-top: 56px;">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="img/poto smk.png" class="d-block w-100"
-                    alt="assets/img/Gambar Sekolah 1" style="height: 400px; object-fit: cover;">
+                <img src="assets/img/poto smk.png" class="d-block w-100"
+                    alt="Gambar Sekolah 1" style="height: 400px; object-fit: cover;">
             </div>
             <div class="carousel-item">
                 <img src="assets/img/poto smk 2.png" class="d-block w-100"
@@ -222,63 +222,73 @@
     </div>
     <hr>
     <!-- profil -->
-    <section id="profil-pengumuman" class="container-fluid p-5">
-        <div class="row">
-            <div class="col-md-6 text-center mb-5 mb-md-0">
-                <h3 class="fw-bold text-primary text-uppercase" style="letter-spacing: 1px;">PROFILE SMK DAARUDDA'WAH</h3>
-                <div class="section-underline"></div>
+   <section id="profil-pengumuman" class="container-fluid p-5">
+  <div class="row align-items-start">
 
-                <!-- Video lokal dari galeri. Ganti path di <source> dengan lokasi video Anda (mis. img/profile.mp4) -->
-                <div class="ratio ratio-16x9 mt-3">
-                    <!-- Video lokal dari galeri. Ganti path di <source> dengan lokasi video Anda (mis. img/profile.mp4) -->
-                    <video controls playsinline class="w-100 h-100" style="object-fit: cover;">
-                        <div class="video-container">
+    <!-- PROFIL VIDEO (KIRI) -->
+    <div class="col-md-6 text-center mb-5 mb-md-0">
+      <h3 class="fw-bold text-primary text-uppercase" style="letter-spacing:1px;">
+        PROFILE SMK DAARUDDA'WAH
+      </h3>
+      <div class="section-underline mb-3"></div>
 
-                        <div class="ratio ratio-16x9 shadow rounded overflow-hidden">
-                      <iframe 
-                           src="https://youtu.be/EwDTbBDehsk?si=ss0nJNk83pxsKkCN="Playlist Video Sekolah"
-                                      allowfullscreen>
-                                      </iframe>
-                                        </div>
-                        <source src="video/Profil SMK Daarudda'wah.mp4" type="video/mp4">
-                    </video>
-                </div>
-            </div>
+      <div class="ratio ratio-16x9 shadow rounded overflow-hidden">
+        <iframe
+          src="https://www.youtube.com/embed/EwDTbBDehsk"
+          title="Profil SMK Daarudda'wah"
+          allowfullscreen>
+        </iframe>
+      </div>
+    </div>
 
-            <div class="col-md-6">
-                <div class="text-center">
-                    <h3 class="fw-bold text-primary text-uppercase" style="letter-spacing: 1px;">PENGUMUMAN</h3>
-                    <div class="section-underline"></div>
-                </div>
+    <!-- PENGUMUMAN (KANAN) -->
+    <div class="col-md-6">
+      <div class="text-center">
+        <h3 class="fw-bold text-primary text-uppercase" style="letter-spacing:1px;">
+          PENGUMUMAN
+        </h3>
+        <div class="section-underline mb-3"></div>
+      </div>
 
-                <div class="text-start">
-                    <p class="mb-3">Assalamualaikum Warahmatullahi Wabarakatuh,</p>
-                    <p class="mb-4">Kami informasikan kepada seluruh siswa, orang tua/wali murid, dan masyarakat umum
-                        bahwa:</p>
+      <div class="text-start">
+        <p>Assalamualaikum Warahmatullahi Wabarakatuh,</p>
 
-                    <p class="mb-2">
-                        <span class="text-primary fs-5 me-2">&diams;</span>
-                        SMK Daarudd'Awah membuka Penerimaan Peserta Didik Baru (PPDB) Tahun Ajaran 2026/2027
-                    </p>
-                    <p class="ms-4 ps-2 mb-2">Pendaftaran dibuka mulai tanggal 12 Januari 2026 s.d. 30 Maret 2026.
-                    </p>
-                    <p class="ms-4 ps-2 mb-4">Pendaftaran dapat dilakukan secara langsung di sekolah atau melalui
-                        website resmi.</p>
+        <p>
+          Kami informasikan kepada seluruh siswa, orang tua/wali murid, dan masyarakat umum bahwa:
+        </p>
 
-                    <p class="mb-2">
-                        <span class="text-primary fs-5 me-2">&diams;</span>
-                        Jurusan yang tersedia:
-                    </p>
-                    <ul class="list-unstyled ms-4 ps-2">
-                        <li class="mb-1">&bull; Teknik Komputer dan Jaringan (TKJ)</li>
-                        <li class="mb-1">&bull; Rekayasa Perangkat Lunak (RPL)</li>
-                        <li class="mb-1">&bull; Akuntansi dan Keuangan Lembaga (AKL)</li>
-                    </ul>
-                </div>
-            </div>
-                </div>
-        </section>
+        <p class="mb-2">
+          <span class="text-primary fs-5 me-2">&diams;</span>
+          SMK Daarudda'Wah membuka Penerimaan Peserta Didik Baru (PPDB) Tahun Ajaran 2026/2027
+        </p>
 
+        <p class="ms-4">
+          Pendaftaran dibuka mulai tanggal <strong>12 Januari 2026</strong>
+          s.d. <strong>30 Maret 2026</strong>.
+        </p>
+
+        <p class="ms-4 mb-3">
+          Pendaftaran dapat dilakukan secara langsung di sekolah atau melalui website resmi.
+        </p>
+
+        <p class="mb-2">
+          <span class="text-primary fs-5 me-2">&diams;</span>
+          Jurusan yang tersedia:
+        </p>
+
+        <ul class="ms-4">
+          <li>Teknik Komputer dan Jaringan (TKJ)</li>
+          <li>Rekayasa Perangkat Lunak (RPL)</li>
+          <li>Akuntansi dan Keuangan Lembaga (AKL)</li>
+        </ul>
+      </div>
+    </div>
+
+  </div>
+</section>
+    
+<!-- sambutan kepsek -->
+    
     <section id="sambutan-kepsek" class="container p-5">
         <div class="text-center mb-4">
             <h3 class="fw-bold text-primary text-uppercase" style="letter-spacing: 1px;">SAMBUTAN KEPALA SEKOLAH</h3>
