--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     <nav class="navbar navbar-dark fixed-top navbar-expand-lg" style="background-color: #0e5faa;">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">
-                <img src="assets/img/logo.png" alt="Logo SMK" width="40">
+                <img src="assets/img/logo.png.png" alt="Logo SMK" width="40">
                 SMK DAARUDDA'WAH
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
