--- a/akl.html
+++ b/akl.html
@@ -18,7 +18,7 @@
     <nav class="navbar navbar-dark fixed-top navbar-expand-lg" style="background-color: #0e5faa;">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">
-                <img src="img/logo.png.png" alt="Logo SMK" width="40" height="40" class="d-inline-block align-text-top me-2">
+                <img src="assets/img/logo.png" alt="Logo SMK" width="40" height="40" class="d-inline-block align-text-top me-2">
                 SMK DAARUDDA'WAH
             </a>
             <a class="btn btn-outline-light" href="index.html">Kembali</a>
@@ -172,6 +172,7 @@
 </body>
 
 </html>
+
 
 
 
