--- a/berita-2.html
+++ b/berita-2.html
@@ -12,7 +12,7 @@
     <nav class="navbar navbar-dark fixed-top" style="background-color:#0e5faa;">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <img src="img/logo.png.png" width="36" height="36" class="d-inline-block align-text-top me-2" alt="Logo">
+                <img src="assets/img/logo.png" width="36" height="36" class="d-inline-block align-text-top me-2" alt="Logo">
                 SMK DAARUDDA'WAH
             </a>
             <a class="btn btn-outline-light" href="index.html">Kembali</a>
@@ -23,7 +23,7 @@
         <h1 class="mb-3">JUARA 2 LOMBA JARINGAN</h1>
         <p class="text-muted small">Publish: 18 Februari 2025</p>
         <div class="mb-4">
-            <img src="img/images 2.jpeg" alt="Berita 2" class="img-cover rounded">
+            <img src="assets/img/images 2.jpeg" alt="Berita 2" class="img-cover rounded">
         </div>
         <article>
             <p>SMK Daarudd'Awah berhasil membawa pulang prestasi di bidang jaringan komputer. Kegiatan ini melibatkan siswa-siswi berbakat dan didukung oleh guru pembimbing yang kompeten.</p>
@@ -39,4 +39,5 @@
     <script> (function(){var el=document.getElementById('year'); if(el) el.textContent=new Date().getFullYear();})(); </script>
 </body>
 </html>
+
 
