--- a/berita.html
+++ b/berita.html
@@ -12,7 +12,7 @@
     <nav class="navbar navbar-dark fixed-top" style="background-color:#0e5faa;">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <img src="img/logo.png.png" width="36" height="36" class="d-inline-block align-text-top me-2" alt="Logo">
+                <img src="assets/img/logo.png" width="36" height="36" class="d-inline-block align-text-top me-2" alt="Logo">
                 SMK DAARUDDA'WAH
             </a>
             <a class="btn btn-outline-light" href="index.html">Kembali</a>
@@ -28,7 +28,7 @@
                     <img src="img/images (3).jpeg" class="card-img-top img-cover" alt="Berita 1">
                     <div class="card-body">
                         <h5 class="card-title">JUARA 1 LOMBA MERAKIT CPU</h5>
-                        <p class="card-text small text-muted">25 Januari 2025</p>
+                        <p class="card-text small text-muted">25 November 2025</p>
                         <p class="card-text">Assalamu'alaikum Warahmatullahi Wabarakatuh. Selamat kepada tim SMK Daarudd'Awah atas prestasi Juara 1.</p>
                         <a href="berita-1.html" class="btn btn-primary" style="background:#0e5faa; border-color:#0e5faa;">Baca selengkapnya</a>
                     </div>
@@ -37,7 +37,7 @@
 
             <div class="col-md-6">
                 <div class="card">
-                    <img src="img/images 2.jpeg" class="card-img-top img-cover" alt="Berita 2">
+                    <img src="assets/img/images 2.jpeg" class="card-img-top img-cover" alt="Berita 2">
                     <div class="card-body">
                         <h5 class="card-title">JUARA 2 LOMBA JARINGAN</h5>
                         <p class="card-text small text-muted">18 Februari 2025</p>
@@ -57,4 +57,5 @@
     <script> (function(){var el=document.getElementById('year'); if(el) el.textContent=new Date().getFullYear();})(); </script>
 </body>
 </html>
+
 
