--- a/berita-1.html
+++ b/berita-1.html
@@ -12,7 +12,7 @@
     <nav class="navbar navbar-dark fixed-top" style="background-color:#0e5faa;">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <img src="img/logo.png.png" width="36" height="36" class="d-inline-block align-text-top me-2" alt="Logo">
+                <img src="img/logo.png" width="36" height="36" class="d-inline-block align-text-top me-2" alt="Logo">
                 SMK DAARUDDA'WAH
             </a>
             <a class="btn btn-outline-light" href="index.html">Kembali</a>
@@ -23,7 +23,7 @@
         <h1 class="mb-3">JUARA 1 LOMBA MERAKIT CPU</h1>
         <p class="text-muted small">Publish: 25 Januari 2025</p>
         <div class="mb-4">
-            <img src="img/images (3).jpeg" alt="Berita 1" class="img-cover rounded">
+            <img src="assets/img/images (3).jpeg" alt="Berita 1" class="img-cover rounded">
         </div>
         <article>
             <p>Assalamu'alaikum Warahmatullahi Wabarakatuh. Selamat kepada tim SMK Daarudd'Awah atas prestasi Juara 1 dalam lomba merakit CPU. Kegiatan ini menampilkan kemampuan teknis dan kerja sama tim yang baik dari siswa-siswi kami.</p>
@@ -39,4 +39,5 @@
     <script> (function(){var el=document.getElementById('year'); if(el) el.textContent=new Date().getFullYear();})(); </script>
 </body>
 </html>
+
 
