--- a/berita.html
+++ b/berita.html
@@ -25,7 +25,7 @@
         <div class="row g-4">
             <div class="col-md-6">
                 <div class="card">
-                    <img src="img/images (3).jpeg" class="card-img-top img-cover" alt="Berita 1">
+                    <img src="assets/img/images (3).jpeg" class="card-img-top img-cover" alt="Berita 1">
                     <div class="card-body">
                         <h5 class="card-title">JUARA 1 LOMBA MERAKIT CPU</h5>
                         <p class="card-text small text-muted">25 November 2025</p>
@@ -57,5 +57,6 @@
     <script> (function(){var el=document.getElementById('year'); if(el) el.textContent=new Date().getFullYear();})(); </script>
 </body>
 </html>
+
 
 
