--- a/visi-misi.html
+++ b/visi-misi.html
@@ -12,7 +12,7 @@
     <nav class="navbar navbar-dark fixed-top" style="background-color:#0e5faa;">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <img src="img/logo.png.png" alt="Logo SMK" width="36" height="36" class="d-inline-block align-text-top me-2">
+                <img src="assets/img/logo.png" alt="Logo SMK" width="36" height="36" class="d-inline-block align-text-top me-2">
                 SMK DAARUDDA'WAH
             </a>
             <a class="btn btn-outline-light" href="index.html">Kembali</a>
@@ -48,4 +48,5 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
