--- a/prestasi-2.html
+++ b/prestasi-2.html
@@ -20,7 +20,7 @@
     </nav>
 
     <main class="container py-5">
-        <h1 class="mb-3">JUARA 2 LOMBA JARINGAN</h1>
+        <h1 class="mb-3">JUARA 2 LOMBA PENCAKSILAT</h1>
         <p class="text-muted small">Publish: 18 Februari 2025</p>
         <div class="mb-4">
             <img src="assets/img/images 2.jpeg" alt="Prestasi 2" class="img-cover rounded">
@@ -40,4 +40,5 @@
 </body>
 
 </html>
+
 
