--- a/prestasi-1.html
+++ b/prestasi-1.html
@@ -12,7 +12,7 @@
     <nav class="navbar navbar-dark fixed-top" style="background-color:#0e5faa;">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <img src="assets/img/logo.png.png" width="36" height="36" class="d-inline-block align-text-top me-2" alt="Logo">
+                <img src="assets/img/logo.png" width="36" height="36" class="d-inline-block align-text-top me-2" alt="Logo">
                 SMK DAARUDDA'WAH
             </a>
             <a class="btn btn-outline-light" href="index.html">Kembali</a>
@@ -40,4 +40,5 @@
 </body>
 
 </html>
+
 
