--- a/prestasi-2.html
+++ b/prestasi-2.html
@@ -26,8 +26,8 @@
             <img src="assets/img/images 2.jpeg" alt="Prestasi 2" class="img-cover rounded">
         </div>
         <article>
-            <p>SMK Daarudd'Awah berhasil meraih Juara 2 pada lomba jaringan komputer. Seluruh peserta menunjukkan keahlian yang baik dalam konfigurasi dan troubleshooting jaringan.</p>
-            <p>Kami bangga dengan pencapaian ini dan akan terus meningkatkan fasilitas serta program pembelajaran untuk mendukung prestasi siswa.</p>
+            <p>SMK Daarudd'Awah berhasil meraih Juara 2 pada lomba pencaksilat. Seluruh peserta menunjukkan keahlian yang baik dalam beladiri pencaksilat.</p>
+            <p>Kami bangga dengan pencapaian ini dan akan terus meningkatkan fasilitas untuk mendukung prestasi siswa.</p>
         </article>
     </main>
 
@@ -40,5 +40,6 @@
 </body>
 
 </html>
+
 
 
