--- a/berita.html
+++ b/berita.html
@@ -27,7 +27,7 @@
                 <div class="card">
                     <img src="assets/img/images (3).jpeg" class="card-img-top img-cover" alt="Berita 1">
                     <div class="card-body">
-                        <h5 class="card-title">JUARA 1 LOMBA MERAKIT CPU</h5>
+                        <h5 class="card-title">JUARA 1 LOMBA PENCAK SILAT & PAGARNUSA</h5>
                         <p class="card-text small text-muted">25 November 2025</p>
                         <p class="card-text">Assalamu'alaikum Warahmatullahi Wabarakatuh. Selamat kepada tim SMK Daarudd'Awah atas prestasi Juara 1.</p>
                         <a href="berita-1.html" class="btn btn-primary" style="background:#0e5faa; border-color:#0e5faa;">Baca selengkapnya</a>
@@ -39,9 +39,9 @@
                 <div class="card">
                     <img src="assets/img/images 2.jpeg" class="card-img-top img-cover" alt="Berita 2">
                     <div class="card-body">
-                        <h5 class="card-title">JUARA 2 LOMBA JARINGAN</h5>
+                        <h5 class="card-title">JUARA 2 LOMBA KEJURCAB PENCAK SILAT</h5>
                         <p class="card-text small text-muted">18 Februari 2025</p>
-                        <p class="card-text">SMK Daarudd'Awah berhasil membawa pulang prestasi di bidang jaringan komputer.</p>
+                        <p class="card-text">SMK Daarudd'Awah berhasil membawa pulang prestasi di bidang beladiri.</p>
                         <a href="berita-2.html" class="btn btn-primary" style="background:#0e5faa; border-color:#0e5faa;">Baca selengkapnya</a>
                     </div>
                 </div>
@@ -57,6 +57,7 @@
     <script> (function(){var el=document.getElementById('year'); if(el) el.textContent=new Date().getFullYear();})(); </script>
 </body>
 </html>
+
 
 
 
