--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
 
         <div class="row align-items-center">
             <div class="col-md-6 mb-4 mb-md-0 text-center">
-                <img src="img/kepsek.jpg" class="img-fluid rounded foto-kepsek" alt="Kepala Sekolah">
+                <img src="assets/img/kepsek.jpg" class="img-fluid rounded foto-kepsek" alt="Kepala Sekolah">
                     class="kepala-img" alt="Foto Kepala Sekolah">
             </div>
 
